--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -13,8 +13,12 @@
         fill: rgb(255,127,80);
     }
     .label {
-        font: 10px sans-serif;
+        font: 12px sans-serif;
         color: black;
+    }
+    .ticklabel {
+      font: 10px sans-serif;
+      color: black;
     }
   </style>
 </head>
@@ -22,8 +26,38 @@
 <body>
   <script>
         let features = ["SignFrequency(M)","Iconicity(M)","LexicalClass","SignType"];
+        const dict_lexical = {
+            'nan': 0,
+            'Minor': 1,
+            'Noun': 2,
+            'Adjective': 3,
+            'Name': 4,
+            'Number': 5,
+            'Adverb': 6,
+            'Verb': 7
+        };
+        console.log(Object.keys(dict_lexical));
+        console.log(Object.values(dict_lexical));
+        const dict_signtype = {
+            'nan': 0,
+            'DominanceViolation': 1,
+            'AsymmetricalDifferentHandshape': 2,
+            'OneHanded': 3,
+            'AsymmetricalSameHandshape': 4,
+            'SymmetricalOrAlternating': 5,
+            'SymmetryViolation': 6
+            };
+        const range_signfreq = {
+            'min': 0,
+            'max': 7
+        };
+        const range_icon = {
+            'min': 0,
+            'max': 7
+        };
+
         // set the dimensions and margins of the graph
-        var margin = { top: 10, right: 10, bottom: 20, left: 30 },
+        var margin = { top: 50, right: 10, bottom: 20, left: 50 },
             cWidth = 150,
             cHeight = 150;
             width = (cWidth + margin.left + margin.right) * features.length,
@@ -31,35 +65,48 @@
         // set the ranges
         var x = d3.scaleLinear().range([0, cWidth]);
         var y = d3.scaleLinear().range([cHeight, 0]);
-        // Scale the range BUT not based on the data
-        x.domain([-0.5, 10]);
-        y.domain([-0.5, 10]);
+
+        // Scale the range BUT not based on the data TODO
+        x.domain([-0.5, 8]);
+        y.domain([-0.5, 8]);
+
         // append the svg object to the body of the page
         // appends a 'group' element to 'svg'
         // moves the 'group' element to the top left margin
-
-        // append the svg object to the body of the page
         var svg = d3.select("body").append("svg")
             .attr("width", "100%")
             .attr("height", "100%")
             .append("g");
 
-
         // Get the data
         d3.csv("data/scatterplot_data.csv", function (error, data) {
+        // d3.csv("plotting/src/scatterplot_matrix/subdf_ind_cat.csv", function (error, data) {
             if (error) throw error;
 
             for (j = 0; j < features.length; j++) {
                 var xfeature = features[j];
                 console.log(xfeature);
+
                 var gX = svg.append("g")
                     .attr("id", xfeature)
                     .attr("transform",
                     "translate(" + (j * (cWidth + margin.left + margin.right)) + "," + 0 + ")");
                 gX.append("text")
                     .attr("class", "label")
-                    .attr("x", cWidth / 2 + 30)
-                    .attr("y", height - 5)
+                    .attr("x", cWidth / 2)
+                    .attr("y", margin.top - 10)
+                    .style("text-anchor", "center")
+                    .text(xfeature);
+
+                var gY = svg.append("g")
+                    .attr("id", xfeature + 'Y')
+                    .attr("transform",
+                        "translate(" + 0 + "," + (margin.top + j * (cHeight + margin.bottom)) + ")");
+                gY.append("text")
+                    .attr("class", "label")
+                    .attr("transform", "rotate(-90)")
+                    .attr("x", - 0.5 * (cHeight + margin.bottom + margin.top))
+                    .attr("y", 20)
                     .style("text-anchor", "center")
                     .text(xfeature);
 
@@ -67,13 +114,16 @@
                 // let itemsWithoutCurrent = features.filter(function(x) { return x !== current; });
 
                 for (i = 0; i < features.length; i++) {
+
                     var yfeature = features[i];
-                    // console.log(gender)
+                    // Scale the range of the data
+                    x.domain([-0.5, d3.max(data, function(d) {return Math.max(d[xfeature]) + 1;})]);
+                    y.domain([-0.5, d3.max(data, function(d) {return Math.max(d[yfeature]) + 1;})]);
+
                     var g = gX.append("g")
                         .attr("id", (yfeature + "-" + xfeature))
                         .attr("transform",
                         "translate(" + margin.left + "," + (margin.top + i * (cHeight + margin.bottom)) + ")");
-
                     // Add the scatterplot
                     g.selectAll(".dot")
                         .data(data)
@@ -83,46 +133,107 @@
                         .attr("cx", function (d) { return x(d[xfeature]); })
                         .attr("cy", function (d) { return y(d[yfeature]); })
                         .on("mouseenter", function (d, i) {
+                            console.log(d3.event.x, d3.event.y)
                             var selCode = d.Code;
                             svg.selectAll(".dot").classed("selected", function (d) { return d.Code == selCode; });
-                            nodes_selected = d3.selectAll(document.elementsFromPoint(d3.event.x, d3.event.y)).filter('.dot');
+                            let nodes_selected = d3.selectAll(document.elementsFromPoint(d3.event.x, d3.event.y)).filter('.dot');
                             let codes_selected = nodes_selected._groups[0].map(a => a.__data__.Code);
-                            svg.selectAll(".dot").classed("selected", function (d){ 
+                            svg.selectAll(".dot").classed("selected", function (d){
                                 return codes_selected.includes(d.Code); 
                             });
+                            console.log(codes_selected);
                         })
                         .on("mouseout", function (d, i) {
                             svg.selectAll(".dot").classed("selected", false);
                         })
-                        .append("title").text(function (d) { return d.Code; });
-                    // Add the X Axis
-                    g.append("g")
-                        .attr("transform", "translate(0," + cHeight + ")")
-                        .call(d3.axisBottom(x));
-                    g.append("text")
-                        .attr("class", "label")
-                        .attr("x", cWidth)
-                        .attr("y", cHeight - 5)
-                        .style("text-anchor", "end")
-                        .text(xfeature);
-                    // Add the Y Axis
-                    g.append("g")
-                        .call(d3.axisLeft(y));
-                    g.append("text")
-                        .attr("class", "label")
-                        .attr("transform", "rotate(-90)")
-                        .attr("y", 10)
-                        .attr("x", 0)
-                        .style("text-anchor", "end")
-                        .text(yfeature);
+                        .append("title").text(function (d) {
+                            //TODO
+                            let title = "group of [tickLabelx-y]";
+                            return title;
+                        });
+                    // Add the X Axix
+                    if( i === 3 && j === 2 ) {
+                        bottom_x = g.append("g")
+                            .attr('id', "x_axis_" + i + j)
+                            .attr("transform", "translate(0," + cHeight + ")")
+                            .call(d3.axisBottom(x)
+                                .tickFormat(function (d, i) {
+                                    return Object.keys(dict_lexical)[i]
+                                }))
+                            .selectAll("text")
+                            .attr("y", 0)
+                            .attr("x", 9)
+                            .attr("dy", ".35em")
+                            .attr("transform", "rotate(90)")
+                            .style("text-anchor", "start");
+                        // svg.select("#x_axis_32").
+                    }
+                    else if ( i === 3 && j === 3) {
+                        bottom_x = g.append("g")
+                            .attr('id', "x_axis_" + i + j)
+                            .attr("transform", "translate(0," + cHeight + ")")
+                            // .attr("transform", "rotate(-90)")
+                            .call(d3.axisBottom(x)
+                                .tickFormat(function (d, i) {
+                                    return Object.keys(dict_signtype)[i]
+                                }))
+                            .selectAll("text")
+                            .attr("y", 0)
+                            .attr("x", 9)
+                            .attr("dy", ".35em")
+                            .attr("transform", "rotate(90)")
+                            .style("text-anchor", "start");
+                    }
+                    else {
+                        bottom_x = g.append("g")
+                          .attr('id', "x_axis_" + i + j)
+                          .attr("transform", "translate(0," + cHeight + ")")
+                          .call(d3.axisBottom(x)
+                          );
+                    }
 
+                    // Add the Left Y Axis
+                    g.append("g")
+                        .attr('id', "y_axisL_" + i + j)
+                        .call(d3.axisLeft(y));
+
+                    if (j === 3) {
+                        if (i === 2) {
+                            right_y = g.append("g")
+                                .attr('id', "y_axisR_" + i + j)
+                                .attr("transform", "translate(" + cWidth + ", 0)")
+                                .call(d3.axisRight(y)
+                                    .tickFormat(function (d, i) {
+                                        return Object.keys(dict_lexical)[i]
+                                    }))
+                        }
+
+                        else if ( i === 3) {
+                            right_y = g.append("g")
+                                .attr('id', "y_axisR_" + i + j)
+                                .attr("transform", "translate(" + cWidth + ", 0)")
+                                .call(d3.axisRight(y)
+                                    .tickFormat(function (d, i) {
+                                        return Object.keys(dict_signtype)[i]
+                                    }))
+                        }
+                        else {
+                            right_y = g.append("g")
+                                .attr('id', "y_axisR_" + i + j)
+                                .attr("transform", "translate(" + cWidth + ", 0)")
+                                .call(d3.axisRight(y));
+                        }
+
+                    }
 
                 }
+
+
             }
 
-
             // // Add brushing
-            // svg.call( d3.brush()                 // Add the brush feature using the d3.brush function
+            // svg.call( d3.brush()                 // Add the brush feature
+            // using the d3.brush function
             //     .extent( [ [0,0], [width,height] ] ) // initialise the brush area: start at 0,0 and finishes at width,height: it means I select the whole graph area
             //     .on("start brush", updateChart) // Each time the brush selection changes, trigger the 'updateChart' function
             // );
