Small changes: side container is scrollable. Still working on zoom.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -18,8 +18,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 
 <body>
-
-    <div id='main-container'>
         <!-- middle visual container -->
         <svg id='viz'></svg>
 
@@ -116,13 +114,13 @@
                             velit.
                             Donec at erat magna. Sed dignissim orci nec eleifend egestas. Donec eget mi consequat massa
                             vestibulum laoreet. Mauris et ultrices nulla, malesuada volutpat ante. Fusce ut orci lorem.
-                            Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.</p>
+                            Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.
+                        </p>
                     </div>
                 </div>
 
             </div>
         </div>
-    </div>
 
 
     <!-- Package imports -->
