--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -5,12 +5,23 @@
   <style>
     body { margin:0;position:fixed;top:0;right:0;bottom:0;left:0; }
     .dot {
-        stroke: rgba(70, 131, 180, 0.3);
-        stroke-width: 2px;
-        fill: none;
+      stroke: rgba(70, 131, 180, 0.3);
+      stroke-width: 1.5px;
+      fill: none;
+      /*fill: rgba(70, 131, 180, 0.3);*/
+      /*fill-opacity: 0.25;*/
     }
     .selected {
-        fill: rgb(255,127,80);
+      fill: rgb(255,100,80);
+      fill-opacity: .2;
+    }
+    .hidden {
+      opacity: 0.3;
+    }
+    .extent {
+      fill: #000;
+      fill-opacity: .125;
+      stroke: #fff;
     }
     .label {
         font: 12px sans-serif;
@@ -25,6 +36,7 @@
 
 <body>
   <script>
+        let brush;
         let features = ["SignFrequency(M)","Iconicity(M)","LexicalClass","SignType"];
         const dict_lexical = {
             'nan': 0,
@@ -46,46 +58,40 @@
             'AsymmetricalSameHandshape': 4,
             'SymmetricalOrAlternating': 5,
             'SymmetryViolation': 6
-            };
-        const range_signfreq = {
-            'min': 0,
-            'max': 7
-        };
-        const range_icon = {
-            'min': 0,
-            'max': 7
         };
 
+
         // set the dimensions and margins of the graph
-        var margin = { top: 50, right: 10, bottom: 20, left: 50 },
+        var margin = { left: 50, top: 50, right: 10, bottom: 20},
             cWidth = 150,
-            cHeight = 150;
+            cHeight = 150,
             width = (cWidth + margin.left + margin.right) * features.length,
             height = (cHeight + margin.top + margin.bottom) * features.length;
         // set the ranges
         var x = d3.scaleLinear().range([0, cWidth]);
         var y = d3.scaleLinear().range([cHeight, 0]);
 
-        // Scale the range BUT not based on the data TODO
-        x.domain([-0.5, 8]);
-        y.domain([-0.5, 8]);
 
         // append the svg object to the body of the page
         // appends a 'group' element to 'svg'
         // moves the 'group' element to the top left margin
-        var svg = d3.select("body").append("svg")
+        const svg = d3.select("body").append("svg")
             .attr("width", "100%")
             .attr("height", "100%")
             .append("g");
+
+        var grid = [...Array(features.length)].map(e => Array(features.length));
 
         // Get the data
         d3.csv("data/scatterplot_data.csv", function (error, data) {
         // d3.csv("plotting/src/scatterplot_matrix/subdf_ind_cat.csv", function (error, data) {
             if (error) throw error;
 
+            let i, j;
             for (j = 0; j < features.length; j++) {
                 var xfeature = features[j];
-                console.log(xfeature);
+
+                // console.log(xfeature);
 
                 var gX = svg.append("g")
                     .attr("id", xfeature)
@@ -114,46 +120,74 @@
                 // let itemsWithoutCurrent = features.filter(function(x) { return x !== current; });
 
                 for (i = 0; i < features.length; i++) {
-
                     var yfeature = features[i];
                     // Scale the range of the data
-                    x.domain([-0.5, d3.max(data, function(d) {return Math.max(d[xfeature]) + 1;})]);
-                    y.domain([-0.5, d3.max(data, function(d) {return Math.max(d[yfeature]) + 1;})]);
+                    x.domain([-0.5, d3.max(data, function (d) {
+                        return Math.max(d[xfeature]) + 1;
+                    })]);
+                    y.domain([-0.5, d3.max(data, function (d) {
+                        return Math.max(d[yfeature]) + 1;
+                    })]);
 
+                    // Add the scatterplot one by one
                     var g = gX.append("g")
                         .attr("id", (yfeature + "-" + xfeature))
                         .attr("transform",
-                        "translate(" + margin.left + "," + (margin.top + i * (cHeight + margin.bottom)) + ")");
-                    // Add the scatterplot
+                            "translate(" + margin.left + "," + (margin.top + i * (cHeight + margin.bottom)) + ")");
+
                     g.selectAll(".dot")
                         .data(data)
                         .enter().append("circle")
                         .classed("dot", true)
                         .attr("r", 4)
-                        .attr("cx", function (d) { return x(d[xfeature]); })
-                        .attr("cy", function (d) { return y(d[yfeature]); })
-                        .on("mouseenter", function (d, i) {
-                            console.log(d3.event.x, d3.event.y)
-                            var selCode = d.Code;
-                            svg.selectAll(".dot").classed("selected", function (d) { return d.Code == selCode; });
+                        .attr("cx", function (d) {
+                            return x(d[xfeature]);
+                        })
+                        .attr("cy", function (d) {
+                            return y(d[yfeature]);
+                        })
+                        .attr("abs_x", function(d){
+                            return(x(d[xfeature]) + (cWidth + margin.left + margin.right) * j + margin.left);
+                            // return(y(d[xfeature]) + (cWidth + margin.left + margin.right) * j + margin.left);
+                        })
+                        .attr("abs_y", function(d){
+                            return(y(d[yfeature]) + (cHeight + margin.bottom) * i + margin.top);
+                        })
+                        .on("mouseenter", function () {
                             let nodes_selected = d3.selectAll(document.elementsFromPoint(d3.event.x, d3.event.y)).filter('.dot');
                             let codes_selected = nodes_selected._groups[0].map(a => a.__data__.Code);
-                            svg.selectAll(".dot").classed("selected", function (d){
-                                return codes_selected.includes(d.Code); 
+                            svg.selectAll(".dot").classed("selected", function (d) {
+                                return codes_selected.includes(d.Code);
                             });
                             console.log(codes_selected);
                         })
-                        .on("mouseout", function (d, i) {
+                        .on("mouseout", function () {
                             svg.selectAll(".dot").classed("selected", false);
                         })
                         .append("title").text(function (d) {
                             //TODO
-                            let title = "group of [tickLabelx-y]";
+                            let title = "group in " + x.invert(x(d[xfeature])) + '-' + y.invert(y(d[yfeature]));
                             return title;
-                        });
+                        // })
+                        // .on('mousedown', function(d){
+                        //   var e = brush.extent(),
+                        //       m = d3.mouse(svg.node()),
+                        //       p = [x.invert(m[0]), y.invert(m[1])];
+                        //
+                        //   if ( brush.empty() ||
+                        //       (e[0][0] > d[0] || d[0] > e[1][0]
+                        //           || e[0][1] > d[1] || d[1] > e[1][1] )
+                        //   ) {
+                        //       brush.extent([p,p]);
+                        //   } else {
+                        //       d3.select(this).classed('extent', true);
+                        //   }
+                    });
+
+
                     // Add the X Axix
-                    if( i === 3 && j === 2 ) {
-                        bottom_x = g.append("g")
+                    if (i === 3 && j === 2) {
+                        g.append("g")
                             .attr('id', "x_axis_" + i + j)
                             .attr("transform", "translate(0," + cHeight + ")")
                             .call(d3.axisBottom(x)
@@ -168,8 +202,8 @@
                             .style("text-anchor", "start");
                         // svg.select("#x_axis_32").
                     }
-                    else if ( i === 3 && j === 3) {
-                        bottom_x = g.append("g")
+                    else if (i === 3 && j === 3) {
+                        g.append("g")
                             .attr('id', "x_axis_" + i + j)
                             .attr("transform", "translate(0," + cHeight + ")")
                             // .attr("transform", "rotate(-90)")
@@ -185,11 +219,11 @@
                             .style("text-anchor", "start");
                     }
                     else {
-                        bottom_x = g.append("g")
-                          .attr('id', "x_axis_" + i + j)
-                          .attr("transform", "translate(0," + cHeight + ")")
-                          .call(d3.axisBottom(x)
-                          );
+                        g.append("g")
+                            .attr('id', "x_axis_" + i + j)
+                            .attr("transform", "translate(0," + cHeight + ")")
+                            .call(d3.axisBottom(x)
+                            );
                     }
 
                     // Add the Left Y Axis
@@ -199,7 +233,7 @@
 
                     if (j === 3) {
                         if (i === 2) {
-                            right_y = g.append("g")
+                            g.append("g")
                                 .attr('id', "y_axisR_" + i + j)
                                 .attr("transform", "translate(" + cWidth + ", 0)")
                                 .call(d3.axisRight(y)
@@ -208,8 +242,8 @@
                                     }))
                         }
 
-                        else if ( i === 3) {
-                            right_y = g.append("g")
+                        else if (i === 3) {
+                            g.append("g")
                                 .attr('id', "y_axisR_" + i + j)
                                 .attr("transform", "translate(" + cWidth + ", 0)")
                                 .call(d3.axisRight(y)
@@ -218,7 +252,7 @@
                                     }))
                         }
                         else {
-                            right_y = g.append("g")
+                            g.append("g")
                                 .attr('id', "y_axisR_" + i + j)
                                 .attr("transform", "translate(" + cWidth + ", 0)")
                                 .call(d3.axisRight(y));
@@ -227,34 +261,60 @@
                     }
 
                 }
-
-
             }
 
-            // // Add brushing
-            // svg.call( d3.brush()                 // Add the brush feature
-            // using the d3.brush function
-            //     .extent( [ [0,0], [width,height] ] ) // initialise the brush area: start at 0,0 and finishes at width,height: it means I select the whole graph area
-            //     .on("start brush", updateChart) // Each time the brush selection changes, trigger the 'updateChart' function
-            // );
-            //
-            // // Function that is triggered when brushing is performed
-            // function updateChart() {
-            //     extent = d3.event.selection;
-            //     svg.selectAll(".dot").classed("selected", function (d){
-            //         // g.classed("selected", function (d){
-            //         console.log(extent, x(d[xfeature]), y(d[yfeature]));
-            //         return isBrushed(extent, x(d[xfeature]), y(d[yfeature])) } )
-            // }
-            //
-            // // A function that return TRUE or FALSE according if a dot is in the selection or not
-            // function isBrushed(brush_coords, cx, cy) {
-            //     var x0 = brush_coords[0][0],
-            //         x1 = brush_coords[1][0],
-            //         y0 = brush_coords[0][1],
-            //         y1 = brush_coords[1][1];
-            //     return x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1;    // This return TRUE or FALSE depending on if the points is in the selected area
-            // }
+            // Add brushing
+            brush = d3.brush()
+                .extent([[margin.left, margin.top], [width, height]])
+                .on("brush", highlightDots);
+
+            // svg.call(brush);
+            svg.append("g")
+                .attr("class", "brush")
+                .call(brush);
+
+            // Function that is triggered when brushing is performed
+            function highlightDots() {
+                let extent = d3.event.selection;
+                console.log(extent);
+                let dots = svg.selectAll('.dot');
+                dots.classed('extent', false);
+
+                let inBound = [];
+                dots["_groups"][0].forEach(function (d) {
+                    if (isBrushed(extent, d.getAttribute("abs_x"), d.getAttribute("abs_y"))) {
+                        // console.log("HERE ", extent, d);
+                        // console.log("(abs_x, abs_y)=", d.getAttribute("abs_x"), d.getAttribute("abs_y"));
+                        // console.log("(cx, cy)=", d.getAttribute("cx"), d.getAttribute("cy"));
+                        inBound.push(d.__data__.Code);
+                    }
+                });
+
+                // dots.classed('selected', function(d) {
+                //     return isBrushed(extent,
+                //         (cWidth + margin.left + margin.right) * j + margin.left + x(d[xfeature]),
+                //         (cHeight + margin.bottom) * i + margin.top + y(d[yfeature]));
+                // });
+
+                console.log(inBound);
+
+                dots.classed("selected", function (d) {
+                    return inBound.includes(d.Code);
+                });
+            }
+
+            // A function that return TRUE or FALSE according if a dot is in the selection or not
+            function isBrushed(brush_coords, cx, cy) {
+                var x0 = brush_coords[0][0],
+                    x1 = brush_coords[1][0],
+                    y0 = brush_coords[0][1],
+                    y1 = brush_coords[1][1];
+                return x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1;    // This return TRUE or FALSE depending on if the points is in the selected area
+            }
+
         });
+
+
+
   </script>
 </body>
