--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -2,6 +2,8 @@
 <head>
   <meta charset="utf-8">
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
+  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">-->
   <style>
     body { margin:0;position:fixed;top:0;right:0;bottom:0;left:0; }
     .dot {
@@ -12,8 +14,8 @@
       /*fill-opacity: 0.25;*/
     }
     .selected {
-      fill: rgb(255,100,80);
-      fill-opacity: .2;
+      fill: rgb(255,175,80);
+      fill-opacity: .25;
     }
     .hidden {
       opacity: 0.3;
@@ -31,10 +33,31 @@
       font: 10px sans-serif;
       color: black;
     }
+    
+    #signCodes-Container {
+      top: 50px;
+      right:inherit;
+      display: block;
+      width:20%;
+      position: absolute;
+    }
+
+    #signList {
+      height:800px;
+      overflow: hidden;
+      overflow-y: scroll;
+    }
   </style>
 </head>
 
 <body>
+
+<div id="signCodes-Container">
+  <p>Highlighted Signs: </p>
+  <ul id="signList">
+  </ul>
+</div>
+
   <script>
         let brush;
         let features = ["SignFrequency(M)","Iconicity(M)","LexicalClass","SignType"];
@@ -76,15 +99,66 @@
         // appends a 'group' element to 'svg'
         // moves the 'group' element to the top left margin
         const svg = d3.select("body").append("svg")
-            .attr("width", "100%")
+            .attr("width", "80%")
             .attr("height", "100%")
             .append("g");
 
         var grid = [...Array(features.length)].map(e => Array(features.length));
 
+        // Add brushing
+        brush = d3.brush()
+            .extent([[margin.left, margin.top], [width, height]])
+            .on("brush", highlightDots);
+
+        // svg.call(brush);
+        svg.append("g")
+            .attr("class", "brush")
+            .call(brush);
+
+        // Function that is triggered when brushing is performed
+        function highlightDots() {
+            let extent = d3.event.selection;
+            console.log(extent);
+            let dots = svg.selectAll('.dot');
+            dots.classed('extent', false);
+
+            let inBound = [];
+            dots["_groups"][0].forEach(function (d) {
+                if (isBrushed(extent, d.getAttribute("abs_x"), d.getAttribute("abs_y"))) {
+                    // console.log("HERE ", extent, d);
+                    // console.log("(abs_x, abs_y)=", d.getAttribute("abs_x"), d.getAttribute("abs_y"));
+                    // console.log("(cx, cy)=", d.getAttribute("cx"), d.getAttribute("cy"));
+                    inBound.push(d.__data__.Code);
+                }
+            });
+
+            // dots.classed('selected', function(d) {
+            //     return isBrushed(extent,
+            //         (cWidth + margin.left + margin.right) * j + margin.left + x(d[xfeature]),
+            //         (cHeight + margin.bottom) * i + margin.top + y(d[yfeature]));
+            // });
+
+            dots.classed("selected", function (d) {
+                return inBound.includes(d.Code);
+            });
+
+            console.log(inBound);
+            displaySelected(inBound);
+        }
+
+        // A function that return TRUE or FALSE according if a dot is in the selection or not
+        function isBrushed(brush_coords, cx, cy) {
+            var x0 = brush_coords[0][0],
+                x1 = brush_coords[1][0],
+                y0 = brush_coords[0][1],
+                y1 = brush_coords[1][1];
+            return x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1;    // This return TRUE or FALSE depending on if the points is in the selected area
+        }
+
+
         // Get the data
-        d3.csv("data/scatterplot_data.csv", function (error, data) {
-        // d3.csv("plotting/src/scatterplot_matrix/subdf_ind_cat.csv", function (error, data) {
+        // d3.csv("data/scatterplot_data.csv", function (error, data) {
+        d3.csv("plotting/src/scatterplot_matrix/subdf_ind_cat.csv", function (error, data) {
             if (error) throw error;
 
             let i, j;
@@ -154,12 +228,15 @@
                             return(y(d[yfeature]) + (cHeight + margin.bottom) * i + margin.top);
                         })
                         .on("mouseenter", function () {
+                            // // clear the brush or NOT
+                            // d3.select(".brush").style("opacity", 0.5);
                             let nodes_selected = d3.selectAll(document.elementsFromPoint(d3.event.x, d3.event.y)).filter('.dot');
                             let codes_selected = nodes_selected._groups[0].map(a => a.__data__.Code);
                             svg.selectAll(".dot").classed("selected", function (d) {
                                 return codes_selected.includes(d.Code);
                             });
                             console.log(codes_selected);
+                            displaySelected(codes_selected);
                         })
                         .on("mouseout", function () {
                             svg.selectAll(".dot").classed("selected", false);
@@ -263,58 +340,66 @@
                 }
             }
 
-            // Add brushing
-            brush = d3.brush()
-                .extent([[margin.left, margin.top], [width, height]])
-                .on("brush", highlightDots);
-
-            // svg.call(brush);
-            svg.append("g")
-                .attr("class", "brush")
-                .call(brush);
-
-            // Function that is triggered when brushing is performed
-            function highlightDots() {
-                let extent = d3.event.selection;
-                console.log(extent);
-                let dots = svg.selectAll('.dot');
-                dots.classed('extent', false);
-
-                let inBound = [];
-                dots["_groups"][0].forEach(function (d) {
-                    if (isBrushed(extent, d.getAttribute("abs_x"), d.getAttribute("abs_y"))) {
-                        // console.log("HERE ", extent, d);
-                        // console.log("(abs_x, abs_y)=", d.getAttribute("abs_x"), d.getAttribute("abs_y"));
-                        // console.log("(cx, cy)=", d.getAttribute("cx"), d.getAttribute("cy"));
-                        inBound.push(d.__data__.Code);
-                    }
-                });
-
-                // dots.classed('selected', function(d) {
-                //     return isBrushed(extent,
-                //         (cWidth + margin.left + margin.right) * j + margin.left + x(d[xfeature]),
-                //         (cHeight + margin.bottom) * i + margin.top + y(d[yfeature]));
-                // });
-
-                console.log(inBound);
-
-                dots.classed("selected", function (d) {
-                    return inBound.includes(d.Code);
-                });
-            }
-
-            // A function that return TRUE or FALSE according if a dot is in the selection or not
-            function isBrushed(brush_coords, cx, cy) {
-                var x0 = brush_coords[0][0],
-                    x1 = brush_coords[1][0],
-                    y0 = brush_coords[0][1],
-                    y1 = brush_coords[1][1];
-                return x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1;    // This return TRUE or FALSE depending on if the points is in the selected area
-            }
+            // // Add brushing
+            // brush = d3.brush()
+            //     .extent([[margin.left, margin.top], [width, height]])
+            //     .on("brush", highlightDots);
+            //
+            // // svg.call(brush);
+            // svg.append("g")
+            //     .attr("class", "brush")
+            //     .call(brush);
+            //
+            // // Function that is triggered when brushing is performed
+            // function highlightDots() {
+            //     let extent = d3.event.selection;
+            //     console.log(extent);
+            //     let dots = svg.selectAll('.dot');
+            //     dots.classed('extent', false);
+            //
+            //     let inBound = [];
+            //     dots["_groups"][0].forEach(function (d) {
+            //         if (isBrushed(extent, d.getAttribute("abs_x"), d.getAttribute("abs_y"))) {
+            //             // console.log("HERE ", extent, d);
+            //             // console.log("(abs_x, abs_y)=", d.getAttribute("abs_x"), d.getAttribute("abs_y"));
+            //             // console.log("(cx, cy)=", d.getAttribute("cx"), d.getAttribute("cy"));
+            //             inBound.push(d.__data__.Code);
+            //         }
+            //     });
+            //
+            //     // dots.classed('selected', function(d) {
+            //     //     return isBrushed(extent,
+            //     //         (cWidth + margin.left + margin.right) * j + margin.left + x(d[xfeature]),
+            //     //         (cHeight + margin.bottom) * i + margin.top + y(d[yfeature]));
+            //     // });
+            //
+            //     console.log(inBound);
+            //
+            //     dots.classed("selected", function (d) {
+            //         return inBound.includes(d.Code);
+            //     });
+            // }
+            //
+            // // A function that return TRUE or FALSE according if a dot is in the selection or not
+            // function isBrushed(brush_coords, cx, cy) {
+            //     var x0 = brush_coords[0][0],
+            //         x1 = brush_coords[1][0],
+            //         y0 = brush_coords[0][1],
+            //         y1 = brush_coords[1][1];
+            //     return x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1;    // This return TRUE or FALSE depending on if the points is in the selected area
+            // }
 
         });
 
+        function displaySelected (sList){
+            document.getElementById('signList').innerHTML = '';
+            console.log(sList);
+            sList.forEach(function (s) {
+                document.getElementById('signList').innerHTML += '<li>' + s + '</li>';
+            });
+        }
 
 
   </script>
+
 </body>
