scatterplot matrix working

--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -2,8 +2,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
-  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">-->
+  <!--<script src="//d3js.org/d3.v5.min.js"></script>-->
   <style>
     body { margin:0;position:fixed;top:0;right:0;bottom:0;left:0; }
     .dot {
@@ -36,14 +35,14 @@
     
     #signCodes-Container {
       top: 50px;
-      right:inherit;
+      margin-left:1000px;
       display: block;
       width:20%;
       position: absolute;
     }
 
     #signList {
-      height:800px;
+      height:700px;
       overflow: hidden;
       overflow-y: scroll;
     }
