Zoom and sidebar changes

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -6,11 +6,11 @@
     <title>Force Layout with labels on edges</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/2ad3362c92.js"></script>
+<!--    <script src="https://kit.fontawesome.com/2ad3362c92.js"></script>-->
     <link rel="stylesheet" type="text/css" href="css/viz-style.css">
 </head>
 
