View centered: viewbox attribute added to svg to center on most screens.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -74,6 +74,8 @@
                             <input class="form-control" type="text" placeholder="Search..." aria-label="Search">
                         </div>
 
+                        <button id='bbox-button'>Get bbox cords</button>
+
                     </div>
                 </div>
                 <!-- Under the filter tab -->
