from scatterplot to graph

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -73,7 +73,7 @@
                             <input class="form-control" type="text" placeholder="Search..." aria-label="Search">
                         </div>
 
-                        <button id='bbox-button'>Get bbox cords</button>
+                        <button id='bbox-button' onclick="reset()">Reset Graph</button>
 
                     </div>
                 </div>
