--- a/visualization/scatterplot_mat.html
+++ b/visualization/scatterplot_mat.html
@@ -67,7 +67,7 @@
           <input class="form-control" type="text" placeholder="Search..." aria-label="Search">
         </div>
 
-        <button id='bbox-button'>Get bbox cords</button>
+        <button id='bbox-button' onclick="reset()">Reset Plot</button>
 
       </div>
     </div>
