--- a/visualization/index.html
+++ b/visualization/index.html
@@ -19,6 +19,9 @@
 <body>
         <!-- middle visual container -->
         <svg id='viz'></svg>
+        <div id="goto">
+            <a href="scatterplot_mat.html">See in Plots</a>
+        </div>
 
         <!-- side container -->
         <div class='side-container'>
