--- a/visualization/scatterplot_mat.html
+++ b/visualization/scatterplot_mat.html
@@ -13,6 +13,9 @@
 <body>
 
 <svg id='plt'></svg>
+<div id="goto">
+  <a href="index.html">See in Graph</a>
+</div>
 
 <!-- side container -->
 <div class='side-container'>
