--- a/visualization/scatterplot_mat.html
+++ b/visualization/scatterplot_mat.html
@@ -22,16 +22,16 @@
   <!-- tabs for side content -->
   <ul class='nav nav-tabs'>
     <li class='nav-item'>
-      <a href="#search" class="nav-link active" data-toggle='tab'>Search</a>
+      <a href="#search" class="nav-link active" data-toggle='tab'>About</a>
     </li>
 
-    <li class="nav-item">
-      <a href="#filter" class="nav-link" data-toggle="tab">Filter</a>
-    </li>
+    <!--<li class="nav-item">-->
+      <!--<a href="#filter" class="nav-link" data-toggle="tab">Filter</a>-->
+    <!--</li>-->
 
-    <li class="nav-item">
-      <a href="#sign-data" class="nav-link" data-toggle="tab">Sign Data</a>
-    </li>
+    <!--<li class="nav-item">-->
+      <!--<a href="#sign-data" class="nav-link" data-toggle="tab">Sign Data</a>-->
+    <!--</li>-->
   </ul>
 
   <!-- contents under each tab -->
@@ -40,82 +40,122 @@
     <div class="tab-pane fade show active" id="search">
       <!-- contents that are within each tab -->
       <div class="inside-tab-content">
-        <h4 class="mt-2">ASL-LEX</h4>
+        <!--<h4 class="mt-2">Scatterplot Matrix</h4>-->
 
-
-
-        <p>
-          <span><i class="fas fa-expand-arrows-alt"></i></span>
-          <span>Larger sizes correspond to high frequency words</span>
-        </p>
-
-
-        <p>
-          <span><i class="fab fa-connectdevelop"></i></span>
-          <span>Signs that are phonologically related (share movement, major location, flexion, and
-                                selected fingers) are connected by lines and share the same color.</span>
-        </p>
-
-        <p>
-          <span><i class="far fa-times-circle"></i></span>
-          <span>Nodes that are grey are disabled due to applied filters</span>
-        </p>
-
-        <hr>
-
-        <h6>Search For A Word</h6>
-
-        <!-- Search form -->
-        <div class="active-cyan-4 mb-4">
-          <input class="form-control" type="text" placeholder="Search..." aria-label="Search">
+        <div>
+          <!--<span><i class="fas fa-expand-arrows-alt"></i></span>-->
+          <p class="mt-3">This view of <strong>Scatterplot Matrix</strong> shows the pairwise relations of the fields.</p>
         </div>
 
+        <hr>
+        <h5 align='center'>Legends</h5>
+        <table class="table-sm">
+          <th>LexicalClass</th>
+          <tr>
+            <td>LC1</td>
+            <td>Minor</td>
+          </tr>
+          <tr>
+            <td>LC2</td>
+            <td>Noun</td>
+          </tr>
+          <tr>
+            <td>LC3</td>
+            <td>Adjective</td>
+          </tr>
+          <tr>
+            <td>LC4</td>
+            <td>Name</td>
+          </tr>
+          <tr>
+            <td>LC5</td>
+            <td>Number</td>
+          </tr>
+          <tr>
+            <td>LC6</td>
+            <td>Adverb</td>
+          </tr>
+          <tr>
+            <td>LC7</td>
+            <td>Verb</td>
+          </tr>
+        </table>
+
+        <table class="table-sm">
+          <th>SignType</th>
+          <tr>
+            <td>ST1</td>
+            <td>DominanceViolation</td>
+          </tr>
+          <tr>
+            <td>ST2</td>
+            <td>AsymmetricalDifferentHandshape</td>
+          </tr>
+          <tr>
+            <td>ST3</td>
+            <td>OneHanded</td>
+          </tr>
+          <tr>
+            <td>ST4</td>
+            <td>AsymmetricalSameHandshape</td>
+          </tr>
+          <tr>
+            <td>ST5</td>
+            <td>SymmetricalOrAlternating</td>
+          </tr>
+          <tr>
+            <td>ST6</td>
+            <td>SymmetryViolation</td>
+          </tr>
+        </table>
+
+        <hr>
         <button id='bbox-button' onclick="reset()">Reset Plot</button>
 
       </div>
     </div>
-    <!-- Under the filter tab -->
-    <div class="tab-pane fade" id="filter">
-      <div class='inside-tab-content'>
-        <div class="filter-top">
-          <a href="#">Filter Info</a> <span>|</span> <a href="#">Remove Filters</a>
-        </div>
+    <!--&lt;!&ndash; Under the filter tab &ndash;&gt;-->
+    <!--<div class="tab-pane fade" id="filter">-->
+      <!--<div class='inside-tab-content'>-->
+        <!--<div class="filter-top">-->
+          <!--<a href="#">Filter Info</a> <span>|</span> <a href="#">Remove Filters</a>-->
+        <!--</div>-->
 
-        <!-- Drop down content -->
-        <div class="filter-bottom">
-          <div class='accordion' id='accordion-content'>
-            <div class="card">
-              <div class="card-header" id='heading-one'>
-                <h2>
-                  <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse-one">
-                    What is html
-                  </button>
-                </h2>
-              </div>
-              <div id="collapse-one" class="collapse" aria-labelledby="heading-one" data-parent="#accordion-content">
-                <div class="card-body">
-                  <p></p>
-                </div>
-              </div>
-            </div>
+        <!--&lt;!&ndash; Drop down content &ndash;&gt;-->
+        <!--<div class="filter-bottom">-->
+          <!--<div class='accordion' id='accordion-content'>-->
+            <!--<div class="card">-->
+              <!--<div class="card-header" id='heading-one'>-->
+                <!--<h2>-->
+                  <!--<button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse-one">-->
+                    <!--What is html-->
+                  <!--</button>-->
+                <!--</h2>-->
+              <!--</div>-->
+              <!--<div id="collapse-one" class="collapse" aria-labelledby="heading-one" data-parent="#accordion-content">-->
+                <!--<div class="card-body">-->
+                  <!--<p></p>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
 
-          </div>
-        </div>
+          <!--</div>-->
+        <!--</div>-->
 
-      </div>
-    </div>
+      <!--</div>-->
+    <!--</div>-->
 
-    <div class="tab-pane fade" id="sign-data">
-      <div class='inside-tab-content'>
-        <h4 class="mt-2">Messages tab content</h4>
-        <p>Donec vel placerat quam, ut euismod risus. Sed a mi suscipit, elementum sem a, hendrerit
-          velit.
-          Donec at erat magna. Sed dignissim orci nec eleifend egestas. Donec eget mi consequat massa
-          vestibulum laoreet. Mauris et ultrices nulla, malesuada volutpat ante. Fusce ut orci lorem.
-          Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.
-        </p>
-      </div>
-    </div>
+    <!--<div class="tab-pane fade" id="sign-data">-->
+      <!--<div class='inside-tab-content'>-->
+        <!--<h4 class="mt-2">Messages tab content</h4>-->
+        <!--<p>Donec vel placerat quam, ut euismod risus. Sed a mi suscipit, elementum sem a, hendrerit-->
+          <!--velit.-->
+          <!--Donec at erat magna. Sed dignissim orci nec eleifend egestas. Donec eget mi consequat massa-->
+          <!--vestibulum laoreet. Mauris et ultrices nulla, malesuada volutpat ante. Fusce ut orci lorem.-->
+          <!--Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.-->
+        <!--</p>-->
+      <!--</div>-->
+    <!--</div>-->
 
   </div>
 </div>
