--- a/visualization/scatterplot_mat.html
+++ b/visualization/scatterplot_mat.html
@@ -110,7 +110,7 @@
         </table>
 
         <hr>
-        <button id='bbox-button' onclick="reset()">Reset Plot</button>
+        <button id='bbox-button' class ="btn btn-primary" onclick="reset()">Reset Plot</button>
 
       </div>
     </div>
