branch clean up

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -20,7 +20,7 @@
         <!-- middle visual container -->
         <svg id='viz'></svg>
         <div id="goto">
-            <a href="scatterplot_mat.html">See Pair Plots</a>
+            <a href="scatterplot.html">See Pair Plots</a>
         </div>
 
         <!-- side container -->
